fixed issue with images taking up too much space on small screens

--- a/static/css/home.css
+++ b/static/css/home.css
@@ -1,1 +1,6 @@
-div.card.h-400 {background-image: url('/static/images/header.jpg');background-color: #fff;background-size: cover;}
+div.card.h-400 {background-image: url('/static/images/header.jpg');background-color: #fff;background-size: cover; background-position: center;}
+@media screen and (max-width: 321px){
+    h1.staal {
+        font-size: 3rem;
+    }
+}
